--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- Hero móvil: título, foto pequeña centrada, descripción -->
             <div class="mobile-hero">
                 <h1 class="mobile-hero-name">PATRICIA DIAZ</h1>
-                <p class="mobile-hero-role">FRONTEND WEB DEVELOPER & UX/UI DESIGNER</p>
+                <H2 class="mobile-hero-role">FRONTEND WEB DEVELOPER & UX/UI DESIGNER</H2>
                 <div class="mobile-hero-photo">
                     <img src="img/img-profile.png" alt="Patricia Diaz">
                 </div>
@@ -26,7 +26,7 @@
             <div class="sidebar-photo">
                 <img src="img/img-profile.png" alt="Patricia Diaz">
             </div>
-            <section class="cv-section cv-section-contact">
+            <section class="cv-section cv-section-contact contact-in-sidebar">
                 <h2 class="section-title">CONTACTO</h2>
                 <div class="section-content">
                     <div class="contact-list">
@@ -122,17 +122,22 @@
                     interactivas y atractivas. Experto en HTML, CSS y JavaScript, con un enfoque en la usabilidad y la
                     accesibilidad. Busco contribuir con soluciones innovadoras y efectivas que mejoren la experiencia
                     del usuario en el sector tecnológico.</p>
-            </header>
+                    <br>
+            </header> 
 
-            <section class="cv-section">
-                <h2 class="section-title">EXPERIENCIA PROFESIONAL</h2>
+            <section class="cv-section cv-section-experience">
+                <h2 class="section-title">EXPERIENCIA PROFESIONAL</h2> <br>
                 <div class="section-content">
                     <div class="timeline">
                         <div class="timeline-item">
                             <div class="timeline-dates">2026</div>
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <h4 class="timeline-title">SUEÑA TU EVENTO</h4>
+                                <div class="timeline-title-row">
+                                    <span class="timeline-dates-inline">2026</span>
+                                    <span class="timeline-sep" aria-hidden="true"> – </span>
+                                    <h4 class="timeline-title">SUEÑA TU EVENTO</h4>
+                                </div>
                                 <p class="timeline-company"><a href="https://suenatuevento.vercel.app/" target="_blank" rel="noopener" class="link-accent">suenatuevento.vercel.app</a></p>
                                 <p class="experience-description">Web para Wedding Planners en Córdoba y España. Organización de bodas mágicas. Plataforma para profesionales del sector eventos nupciales, desplegada en Vercel.</p>
                             </div>
@@ -141,7 +146,11 @@
                             <div class="timeline-dates">2025-2026</div>
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <h4 class="timeline-title">DESARROLLO DE INTERFACES WEB PARA AGENCIAS Y PROVEEDORES DE EVENTOS Y BODAS</h4>
+                                <div class="timeline-title-row">
+                                    <span class="timeline-dates-inline">2025-2026</span>
+                                    <span class="timeline-sep" aria-hidden="true"> – </span>
+                                    <h4 class="timeline-title">PLATAFORME WEB PARA AGENCIAS NUPCIALES</h4>
+                                </div>
                                 <p class="timeline-company"><a href="https://bodasmedia.vercel.app/" target="_blank" rel="noopener" class="link-accent">BodasMedia.</a></p>
                                <p class="experience-description">Diseño y desarrollo de plataforma web para profesionales de bodas, centrada en experiencia de usuario, estructura persuasiva y optimización de conversión. Aplicación de principios UX/UI, diseño mobile-first y estrategia digital orientada a negocio.</p>
                                <p class="experience-description">En esta página web, se puede encontrar variedad de diseños estrategicos, así como información sobre la empresa y los servicios que ofrece, con un diseño responsive y optimizado para SEO.</p>
@@ -151,7 +160,11 @@
                             <div class="timeline-dates">2023-2024</div>
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <h4 class="timeline-title">PORTAFOLIO WEB</h4>
+                                <div class="timeline-title-row">
+                                    <span class="timeline-dates-inline">2023-2024</span>
+                                    <span class="timeline-sep" aria-hidden="true"> – </span>
+                                    <h4 class="timeline-title">PORTAFOLIO WEB</h4>
+                                </div>
                                 <p class="timeline-company"><a href="https://patriciadiaz.dev/" target="_blank" rel="noopener" class="link-accent">patriciadiaz.dev</a></p>
                                 <p class="experience-description">Página web portfolio con estilo dinámico y minimalista. Muestra proyectos como RSVP-BODA, Administrador de productos y Helmets Nebulon. Desarrollado con HTML, CSS, JavaScript, Vue.js y Tailwind CSS. Diseño responsive y enfocado en usabilidad.</p>
                             </div>
@@ -160,7 +173,11 @@
                             <div class="timeline-dates">2022-2023</div>
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <h4 class="timeline-title">GESTORA DE CONTENIDOS WEB DPT. MARKETING</h4>
+                                <div class="timeline-title-row">
+                                    <span class="timeline-dates-inline">2022-2023</span>
+                                    <span class="timeline-sep" aria-hidden="true"> – </span>
+                                    <h4 class="timeline-title">GESTOR DE CONTENIDOS</h4>
+                                </div>
                                 <p class="timeline-company"><a href="https://www.mediamarkt.es" target="_blank" rel="noopener">Media Markt Saturn</a>, BCN.</p>
                                 <ul class="timeline-list">
                                     <li>Desarrollo y administración de campañas de newsletters</li>
@@ -173,7 +190,11 @@
                             <div class="timeline-dates">2018-2019</div>
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <h4 class="timeline-title">AUXILIAR ADMINISTRATIVA</h4>
+                                <div class="timeline-title-row">
+                                    <span class="timeline-dates-inline">2018-2019</span>
+                                    <span class="timeline-sep" aria-hidden="true"> – </span>
+                                    <h4 class="timeline-title">AUXILIAR ADMINISTRATIVA</h4>
+                                </div>
                                 <p class="timeline-company"><a href="https://www.feelingretail.com" target="_blank" rel="noopener">Feeling Retail SL</a> (Telecomunicaciones), BCN.</p>
                                 <ul class="timeline-list">
                                     <li>Gestión de bases de datos y automatización de procesos</li>
@@ -185,7 +206,7 @@
                 </div>
             </section>
 
-            <section class="cv-section">
+            <section class="cv-section cv-section-education">
                 <h2 class="section-title">EDUCACIÓN</h2>
                 <div class="section-content">
                     <div class="content-item education-item">
@@ -233,6 +254,38 @@
                 </div>
             </section>
         </main>
+        <!-- Contacto al final solo en móvil -->
+        <section class="cv-section cv-section-contact contact-at-end">
+            <h2 class="section-title">CONTACTO</h2>
+            <div class="section-content">
+                <div class="contact-list">
+                    <div class="contact-item">
+                        <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z" />
+                        </svg>
+                        <a href="tel:+34698222944">34-698 222 944</a>
+                    </div>
+                    <div class="contact-item">
+                        <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
+                        </svg>
+                        <a href="mailto:patriciaddc80@gmail.com">patriciaddc80@gmail.com</a>
+                    </div>
+                    <div class="contact-item">
+                        <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                        </svg>
+                        <a href="https://linkedin.com/in/patriciadiaz" target="_blank" rel="noopener">linkedin.com/in/patriciadiaz</a>
+                    </div>
+                    <div class="contact-item">
+                        <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                        </svg>
+                        <a href="https://github.com/Patriciaddc80/PATRICIA-DIAZ" target="_blank" rel="noopener">github.com/Patriciaddc80</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="scripts.js"></script>
