reajuste version mobile

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <aside class="cv-sidebar">
             <!-- Hero móvil: título, foto pequeña centrada, descripción -->
             <div class="mobile-hero">
-                <h1 class="mobile-hero-name">PATRICIA DIAZ</h1>
-                <H2 class="mobile-hero-role">FRONTEND WEB DEVELOPER & UX/UI DESIGNER</H2>
+                <h1 class="mobile-hero-name">FRONTEND WEB DEVELOPER & UX/UI DESIGNER</h1>
+                <H2 class="mobile-hero-role">PATRICIA DIAZ</H2>
                 <div class="mobile-hero-photo">
                     <img src="img/img-profile.png" alt="Patricia Diaz">
                 </div>
@@ -118,7 +118,7 @@
             <header class="content-header">
                 <h1 class="header-name">PATRICIA DIAZ</h1>
                 <p class="header-role">FRONTEND WEB DEVELOPER & UX/UI DESIGNER</p>
-                <p class="header-summary">Desarrollador Frontend apasionado con experiencia en la creación de interfaces
+                <p class="header-summary">Me llamo Patricia Díaz, soy Desarrollador Frontend con experiencia en la creación de interfaces
                     interactivas y atractivas. Experto en HTML, CSS y JavaScript, con un enfoque en la usabilidad y la
                     accesibilidad. Busco contribuir con soluciones innovadoras y efectivas que mejoren la experiencia
                     del usuario en el sector tecnológico.</p>
